--- a/.landscaper/machine-images/resources.yaml
+++ b/.landscaper/machine-images/resources.yaml
@@ -15,4 +15,5 @@ relation: local
 input:
   type: file
   path: ./schemata/machine-images.yaml
+  mediaType: application/vnd.gardener.landscaper.jsonschema.layer.v1.json
 ...
