--- a/.landscaper/machine-images/schemata/machine-images.yaml
+++ b/.landscaper/machine-images/schemata/machine-images.yaml
@@ -1,16 +1,26 @@
-"$schema": "https://json-schema.org/draft/2020-12/schema"
-"$id": "github.com/gardener/landscaper-utils/machineimages/schemata/machine-images"
-"title": "Machine Images"
-"description": "A list of machine images"
-type: array
-items:
-  type: object
-  properties:
-    name:
-      type: string
-    versions:
-      type: array
-      items:
-        type: object
-        properties:
-          version: string
+{
+  "$schema": "https://json-schema.org/draft/2020-12/schema",
+  "$id": "github.com/gardener/landscaper-utils/machineimages/schemata/machine-images",
+  "title": "Machine Images",
+  "description": "A list of machine images",
+  "type": "array",
+  "items": {
+    "type": "object",
+    "properties": {
+      "name": {
+        "type": "string"
+      },
+      "versions": {
+        "type": "array",
+        "items": {
+          "type": "object",
+          "properties": {
+            "version": {
+              "type": "string"
+            }
+          }
+        }
+      }
+    }
+  }
+}
