--- a/.landscaper/machine-images/blueprint/export-execution.yaml
+++ b/.landscaper/machine-images/blueprint/export-execution.yaml
@@ -1,3 +1,3 @@
 exports:
-  machineImages: |
+  machineImages:
     {{- index .values "deployitems" "machine-image-computation" "resultMachineImages" | nindent 4 }}
